# sunkit-instruments

./: .codespellrc  .coveragerc  .cruft.json  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .rtd-environment.yml  .ruff.toml  .sunpy-template.yml  CHANGELOG.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.rst  azure-pipelines.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  scheduled_builds.yml
changelog/: 111.doc.rst  125.breaking.rst  126.breaking.rst  128.bugfix.rst  130.bugfix.rst  133.trivial.rst  143.breaking.rst  143.bugfix.rst  150.feature.3.rst  150.feature.rst  168.breaking.rst  168.feature.rst  178.bugfix.rst  179.bugfix.rst  185.breaking.1.rst  185.breaking.rst  207.feature.rst  35.feature.rst  48.bugfix.rst  61.breaking.rst  61.feature.rst  81.breaking.rst  81.feature.rst  98.feature.1.rst  98.feature.2.rst  98.feature.rst  99.doc.rst  README.rst
docs/: conf.py  glossary.rst  index.rst  nitpick-exceptions
docs/code_ref/: abstractions.rst  fermi.rst  goes_xrs.rst  index.rst  io.rst  iris.rst  lyra.rst  response.rst  rhessi.rst  sunkit_instruments.rst  suvi.rst
docs/topic_guide/: channel_response.rst  index.rst
examples/: calculate_goes_temperature_and_emission_measure.py  plot_suvi_thematic_map.py  readme.txt
licenses/: LICENSE.rst
sunkit_instruments/: __init__.py  conftest.py  utils.py
sunkit_instruments/abstractions/: __init__.py  channels.py
sunkit_instruments/abstractions/tests/: test_channel.py
sunkit_instruments/data/test/: __init__.py  annotation_lyra.db  annotation_manual.db  annotation_ppt.db  annotation_science.db  go1520110607.fits  goes_15_test_chianti_tem_idl.sav  goes_16_test_chianti_tem_idl.sav  hsi_calib_ev_20020220_1106_20020220_1106_25_40.fits  hsi_image_20101016_191218.fits  hsi_imagecube_clean_20150930_1307_1tx1e.fits  hsi_imagecube_clean_20151214_2255_2tx2e.fits  iris_l2_20130801_074720_4040000014_SJI_1400_t000.fits  sci_gxrs-l2-irrad_g15_d20170910_v0-0-0_truncated.nc  sci_xrsf-l2-flx1s_g16_d20170910_v2-1-0_truncated.nc  sci_xrsf-l2-flx1s_g18_d20250328_v2-2-0_truncated.nc
sunkit_instruments/fermi/: fermi.py
sunkit_instruments/fermi/tests/: test_fermi.py
sunkit_instruments/goes_xrs/: __init__.py  goes_chianti_tem.py  goes_xrs.py
sunkit_instruments/goes_xrs/tests/: test_goes_xrs.py
sunkit_instruments/io/: .#suvi.py  __init__.py  io.py
sunkit_instruments/io/tests/: test_io.py
sunkit_instruments/iris/: iris.py  iris_tools.py  obsid.py  sji.py  spectrograph.py
sunkit_instruments/iris/data/: setup_package.py
sunkit_instruments/iris/data/test/: __init__.py
sunkit_instruments/iris/tests/: test_iris.py  test_iris_tools.py  test_iris_utils.py  test_obsid.py  test_sji.py  test_spectrograph.py
sunkit_instruments/iris/utils/: iris_utils.py
sunkit_instruments/iris/utils/tests/: test_iris_utils.py
sunkit_instruments/lyra/: lyra.py
sunkit_instruments/lyra/tests/: test_lyra.py
sunkit_instruments/metis/: __init__.py  metis.py
sunkit_instruments/metis/tests/: test_metis.py
sunkit_instruments/response/: __init__.py  abstractions.py  linelist.py  spectral.py  thermal.py
sunkit_instruments/response/tests/: test_channel.py  test_emission_model.py  test_linelist.py  test_source_spectra.py  test_spectral.py
sunkit_instruments/rhessi/: rhessi.py
sunkit_instruments/rhessi/tests/: test_rhessi.py
sunkit_instruments/suvi/: __init__.py  _variables.py  io.py  suvi.py
sunkit_instruments/suvi/data/: SUVI_FM1_131A_eff_area.txt  SUVI_FM1_171A_eff_area.txt  SUVI_FM1_195A_eff_area.txt  SUVI_FM1_284A_eff_area.txt  SUVI_FM1_304A_eff_area.txt  SUVI_FM1_94A_eff_area.txt  SUVI_FM1_gain.txt  SUVI_FM2_131A_eff_area.txt  SUVI_FM2_171A_eff_area.txt  SUVI_FM2_195A_eff_area.txt  SUVI_FM2_284A_eff_area.txt  SUVI_FM2_304A_eff_area.txt  SUVI_FM2_94A_eff_area.txt  SUVI_FM2_gain.txt  SUVI_FM3_131A_eff_area.txt  SUVI_FM3_171A_eff_area.txt  SUVI_FM3_195A_eff_area.txt  SUVI_FM3_284A_eff_area.txt  SUVI_FM3_304A_eff_area.txt  SUVI_FM3_94A_eff_area.txt  SUVI_FM3_gain.txt  SUVI_FM4_131A_eff_area.txt  SUVI_FM4_171A_eff_area.txt  SUVI_FM4_195A_eff_area.txt  SUVI_FM4_284A_eff_area.txt  SUVI_FM4_304A_eff_area.txt  SUVI_FM4_94A_eff_area.txt  SUVI_FM4_gain.txt
sunkit_instruments/suvi/tests/: conftest.py  test_io.py  test_suvi.py
