[metadata]
name = sunkit_instruments
author = The SunPy Developers
author_email = sunpy@googlegroups.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://sunpy.org
description = A sunpy-affiliated package for solar instrument-specific tools.
long_description = file: README.rst
long_description_content_type = text/x-rst
platform = any
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    sunpy

[options.extras_require]
tests =
    pytest < 5.4
    pytest-astropy >= 0.8
    pytest-cov
    pytest-doctestplus >= 0.5
    tox
    zeep
docs =
    sphinx
    sphinx-automodapi
    sphinx-gallery
    towncrier
    sunpy-sphinx-theme

[options.package_data]
sunkit_instruments = data/*

[tool:pytest]
minversion = 5.0
testpaths = "sunkit_instruments" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS IGNORE_EXCEPTION_DETAIL
text_file_format = rst
addopts = -p no:warnings
markers =
    online: Marks this test function as needing online connectivity
remote_data_strict = True

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
    *.csv,
rst-directives =
    plot

[coverage:run]
omit =
  sunkit_instruments/_sunpy_init*
  sunkit_instruments/conftest.py
  sunkit_instruments/*setup_package*
  sunkit_instruments/tests/*
  sunkit_instruments/*/tests/*
  sunkit_instruments/extern/*
  sunkit_instruments/version*
  */sunkit_instruments/_sunpy_init*
  */sunkit_instruments/conftest.py
  */sunkit_instruments/*setup_package*
  */sunkit_instruments/tests/*
  */sunkit_instruments/*/tests/*
  */sunkit_instruments/extern/*
  */sunkit_instruments/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
