[metadata]
name = sunkit_instruments
provides = sunkit_instruments
description = "A SunPy-affiliated package for solar instrument-specific tools."
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The SunPy Community
author_email = sunpy@googlegroups.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://sunpy.org
edit_on_github = True
github_project = sunpy/sunkit_instruments
platform = any
keywords = solar physics, solar, science, sun, wcs, coordinates
classifiers =
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  numpy
  pandas
  sunpy[net]
  matplotlib
  astropy

[options.extras_require]
tests =
  pytest-astropy >= 0.8  # 0.8 is the first release to include filter-subpackage
  pytest-doctestplus >= 0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
  pytest-mock
  tox
docs =
  sphinx
  sphinx-automodapi
  towncrier
  sunpy-sphinx-theme

[tool:pytest]
minversion = 3.0
testpaths = "sunkit_instruments" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".jupyter" ".history" "tools"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = --doctest-rst --doctest-ignore-import-errors
markers =
    remote_data: marks this test function as needing remote data.
    online: marks this test function as needing online connectivity.
    figure: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
    flaky
    array_compare
remote_data_strict = True
# Pin junit behaviour; we might want to update this to xunit2 at some point
junit_family=xunit1
filterwarnings =
    error
    error::sunpy.util.exceptions.SunpyDeprecationWarning
    #
    # A list of warnings to ignore follows. If you add to this list, you MUST
    # add a comment or ideally a link to an issue that explains why the warning
    # is being ignored
    #
    # These warnings are raised on our CI due to something odd about numpy installation,
    # but don't impact the tests
    ignore:numpy.ufunc size changed:RuntimeWarning
    # See https://github.com/aio-libs/aiohttp/issues/4842
    ignore:"@coroutine" decorator is deprecated
    # See https://github.com/Cadair/parfive/issues/41
    # Or other packages
    ignore:The loop argument is deprecated
    # See https://github.com/mvantellingen/python-zeep/issues/956
    ignore:defusedxml.lxml is no longer supported and will be removed in a future release.
    # Sunpy Timeseries Warning.
    ignore:Unknown units for.*

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
rst-directives =
    plot

[isort]
balanced_wrapping = True
skip=docs/conf.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy, asdf, sunpy
known_first_party = sunkit_instruments
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
  sunkit_instruments/conftest.py
  sunkit_instruments/cython_version*
  sunkit_instruments/*setup*
  sunkit_instruments/extern/*
  sunkit_instruments/*/tests/*
  sunkit_instruments/version*
  sunkit_instruments/__init__*
  sunkit_instruments/data/sample.py
  sunkit_instruments/data/_sample.py
  */sunkit_instruments/conftest.py
  */sunkit_instruments/cython_version*
  */sunkit_instruments/*setup*
  */sunkit_instruments/extern/*
  */sunkit_instruments/*/tests/*
  */sunkit_instruments/version*
  */sunkit_instruments/__init__*
  */sunkit_instruments/data/sample.py
  */sunkit_instruments/data/_sample.py

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
