[metadata]
name = sunkit-instruments
provides = sunkit_instruments
description = "A SunPy-affiliated package for solar instrument-specific tools."
long_description = file: README.rst
long_description_content_type = text/x-rst
author = The SunPy Community
author_email = sunpy@googlegroups.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://sunpy.org
edit_on_github = True
github_project = sunpy/sunkit_instruments
platform = any
keywords = solar physics, solar, science, telescope, instrumentation
classifiers =
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
install_requires =
  matplotlib>=3.1.1
  pandas>=1.0.0
  scipy>=1.2.0
  sunpy[net,timeseries]>=3.0.0

[options.extras_require]
tests =
  pytest-astropy >= 0.8  # 0.8 is the first release to include filter-subpackage
  pytest-doctestplus >= 0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
  pytest-mock
  tox
docs =
  sphinx
  sphinx-automodapi
  sphinx-changelog
  sunpy-sphinx-theme

[options.packages.find]
exclude = sunkit_instruments._dev

[tool:pytest]
testpaths = "sunkit_instruments" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history" "sunkit_instruments/_dev"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = -rsa -vvv --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
markers =
    remote_data: marks this test function as needing remote data.
    online: marks this test function as needing online connectivity.
    array_compare: compare arrays
remote_data_strict = True
# Pin junit behaviour; we might want to update this to xunit2 at some point
junit_family=xunit1
filterwarnings =
    error
    error::sunpy.util.exceptions.SunpyDeprecationWarning
    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
    always::pytest.PytestConfigWarning
    #
    # A list of warnings to ignore follows. If you add to this list, you MUST
    # add a comment or ideally a link to an issue that explains why the warning
    # is being ignored
    #
    #
    # See https://github.com/pandas-dev/pandas/issues/26367; this can be
    # removed when our minimum pandas version is >=0.25
    ignore:can't resolve package from __spec__ or __package__:ImportWarning
    # See https://github.com/spacetelescope/asdf/issues/789
    ignore:direct construction of AsdfSchemaFile has been deprecated
    ignore:direct construction of AsdfSchemaItem has been deprecated
    ignore:direct construction of AsdfSchemaExampleItem has been deprecated
    # See https://github.com/Cadair/parfive/issues/41
    ignore:The loop argument is deprecated
    # This is due to dependencies building with a numpy version different from
    # the local installed numpy version, but should be fine
    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
    # See https://github.com/mvantellingen/python-zeep/issues/956
    ignore:defusedxml.lxml is no longer supported:DeprecationWarning
    # See https://github.com/aio-libs/aiohttp/issues/4842
    ignore:"@coroutine" decorator is deprecated
    # See https://github.com/spacetelescope/asdf/issues/789
    ignore:direct construction of AsdfSchemaFile has been deprecated
    ignore:direct construction of AsdfSchemaItem has been deprecated
    ignore:direct construction of AsdfSchemaExampleItem has been deprecated
    # See https://github.com/scikit-image/scikit-image/issues/4848
    ignore:Converting `np.inexact` or `np.floating` to a dtype is deprecated
    # See https://github.com/astropy/astropy/pull/10570
    ignore:leap-second auto-update failed
    # See https://github.com/astropy/extension-helpers/issues/23
    ignore:Distutils was imported before Setuptools
    # Figure tests use agg backend so show doesn't work but we use it in peek
    ignore:Matplotlib is currently using agg, which is a non-GUI backend, so cannot show the figure.
    # Ignore doctest issues: docs/guide/tour.rst
    ignore:File may have been truncated*
    # Some tests use data that have dates in the future and ERFA does not like.
    ignore:ERFA function "d2dtf"*
    ignore:ERFA function "dtf2d"*
    # Currently helio makes unverified requests - this filter should be removed when
    # https://github.com/sunpy/sunpy/issues/4401 is fixed
    ignore:Unverified HTTPS request
    # https://github.com/astropy/astropy/issues/11272
    ignore:elementwise == comparison failed and returning scalar instead:FutureWarning:astropy.table
    # This isn't really an issue it's an annoyance, it's triggered by printing
    # an astropy table inside a test, which is generally only done when
    # CHANNEL UNITS ISSUE.
    ignore:Unknown units for CHANNEL.*:sunpy.util.exceptions.SunpyUserWarning:
    # debugging.
    ignore:the imp module is deprecated in favour of importlib:DeprecationWarning:ipykernel.iostream

[pycodestyle]
max_line_length = 100

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
rst-directives =
    plot

[isort]
balanced_wrapping = True
skip=docs/conf.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy, asdf, sunpy
known_first_party = sunkit_instruments
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
  */sunkit_instruments/__init__*
  */sunkit_instruments/*/tests/*
  */sunkit_instruments/*setup*
  */sunkit_instruments/conftest.py
  */sunkit_instruments/cython_version*
  */sunkit_instruments/data/_sample.py
  */sunkit_instruments/data/sample.py
  */sunkit_instruments/extern/*
  */sunkit_instruments/version*
  sunkit_instruments/__init__*
  sunkit_instruments/*/tests/*
  sunkit_instruments/*setup*
  sunkit_instruments/conftest.py
  sunkit_instruments/cython_version*
  sunkit_instruments/data/_sample.py
  sunkit_instruments/data/sample.py
  sunkit_instruments/extern/*
  sunkit_instruments/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
